welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: ';' expected but 'if' found.
  } if (estAdo(b)) {
    ^